# task-tracker

./: .env.example  Dockerfile  LICENSE  README.md  docker-compose.yml  migrate.sh  pyproject.toml
app/: database.py  deps.py  main.py  models.py
